<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:theme="@style/Theme.AlalamiyaAlhuraTask.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        android:text="@string/prayer_app_text"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:id="@id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/trans"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/appbar"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.prayerTimes.PrayerTimesActivity">


                <androidx.cardview.widget.CardView
                    android:id="@+id/basic_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/backArrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:contentDescription="@string/ignore"
                            android:padding="8dp"
                            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_210sdp"
                            android:layout_height="@dimen/_115sdp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="15dp"
                            app:cardBackgroundColor="@color/second"
                            app:cardCornerRadius="69dp"
                            app:elevation="20dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/forwardArrow"
                            app:layout_constraintStart_toEndOf="@id/backArrow"
                            app:layout_constraintTop_toTopOf="parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center">

                                    <TextView
                                        android:id="@+id/currentMonthTextView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="20dp"

                                        android:fontFamily="@font/segoe"
                                        android:gravity="center"
                                        android:padding="5dp"
                                        android:textColor="@color/black"
                                        android:textSize="18sp"
                                        android:textStyle="bold"
                                        tools:text="DEC" />

                                    <TextView
                                        android:id="@+id/currentDayTextView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="20dp"
                                        android:fontFamily="@font/segoe"
                                        android:gravity="center"
                                        android:padding="5dp"
                                        android:textColor="@color/black"

                                        android:textSize="18sp"
                                        android:textStyle="bold"
                                        tools:text="25" />

                                    <TextView
                                        android:id="@+id/currentYearTextView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="20dp"
                                        android:fontFamily="@font/segoe"
                                        android:gravity="center"

                                        android:padding="5dp"
                                        android:textColor="@color/black"
                                        android:textSize="18sp"
                                        android:textStyle="bold"
                                        tools:text="2005" />

                                </LinearLayout>


                                <TextView
                                    android:id="@+id/currentLocation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="15dp"
                                    android:fontFamily="@font/segoe"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:textColor="@color/black"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    tools:text="Alexendria" />
                            </LinearLayout>


                        </androidx.cardview.widget.CardView>


                        <ImageView
                            android:id="@+id/forwardArrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:contentDescription="@string/ignore"
                            android:padding="8dp"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/next_prayer_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="32dp"
                    app:contentPadding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/basic_card_view">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/nextPrayerTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/segoe"
                            android:gravity="center"
                            android:padding="8dp"
                            android:textColor="@color/text"
                            android:textSize="24sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="ISHA"

                            />

                        <TextView
                            android:id="@+id/time_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="35dp"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:paddingBottom="10dp"
                            android:text="@string/time_left"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/nextPrayerTextView" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/time_left">

                            <TextView
                                android:id="@+id/hours"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="2dp"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                tools:text="1 hr" />

                            <TextView
                                android:id="@+id/minutes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                tools:text="20 min" />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/next_payer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/segoe"

                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/next_prayer"
                            android:textColor="@color/text_second"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    app:endIconMinSize="50dp"
                    app:endIconTint="@color/custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/next_prayer_card_view">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_background_auto_text"
                        android:inputType="none"
                        android:text="@string/_2_islamic_society_of_north_america"


                        />


                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/prayerTimesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/qiblaButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginBottom="15dp"
                    android:background="@color/trans"
                    android:fontFamily="@font/segoe"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/show_qibla_direction_on_map"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>